added extLink icon in projects; updated bio;

--- a/projects.json
+++ b/projects.json
@@ -13,6 +13,7 @@
       {
         "number": 10,
         "title": "TradeForecast",
+        "src": "https://github.com/vinay-ram1999/TradeForecast/blob/master/results/DL_FinalReport.pdf",
         "image":"image_10.jpg",
         "githubRepo": "vinay-ram1999/TradeForecast",
         "reportLink": "https://linktoreport.com/tradeforecast",
